Read Foeign language data (Shweta) Issue in country and stakeholder list page (Aman) Issue in Print Action Mail (Shweta)

--- a/WTO/Views/Partial/Notification/NotificationActions.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationActions.cshtml
@@ -227,36 +227,36 @@
                                         <tbody>
                                             <tr>
                                                 <td style="padding:5px;border-color:#ddd;vertical-align:top;width:160px;display:inline-block;"><b> Notification Number</b></td>
-                                                <td style="padding:5px;border-color:#ddd;">@Model.NotificationNumber</td>
+                                                <td style="padding:5px;border-color:#ddd;word-break: break-all;">@Model.NotificationNumber</td>
                                             </tr>
                                             <tr>
                                                 <td style="padding:5px;border-color:#ddd;vertical-align:top;width:160px;display:inline-block;"><b>Title</b></td>
-                                                <td style="padding:5px;border-color:#ddd;">@Model.NotificationTitle</td>
+                                                <td style="padding:5px;border-color:#ddd;word-break: break-all;">@Model.NotificationTitle</td>
                                             </tr>
                                             <tr>
                                                 <td style="padding:5px;border-color:#ddd;vertical-align:top;width:160px;display:inline-block;"><b>Meeting Date</b></td>
-                                                <td style="padding:5px;border-color:#ddd;"><span id="txtMeetingDate1">@Model.MeetingDate</span></td>
+                                                <td style="padding:5px;border-color:#ddd;word-break: break-all;"><span id="txtMeetingDate1">@Model.MeetingDate</span></td>
                                             </tr>
                                             <tr>
                                                 <td style="padding:5px;border-color:#ddd;vertical-align:top;width:160px;display:inline-block;"><b>Action Due on</b></td>
-                                                <td style="padding:5px;border-color:#ddd;"><span id="lblActionDueOn1"></span></td>
+                                                <td style="padding:5px;border-color:#ddd;word-break: break-all;"><span id="lblActionDueOn1"></span></td>
                                             </tr>
                                             <tr>
                                                 <td style="padding:5px;border-color:#ddd;vertical-align:top;width:160px;display:inline-block;"><b>Action taken on</b></td>
-                                                <td style="padding:5px;border-color:#ddd;"><span id="lblActionTakenOn1"></span></td>
+                                                <td style="padding:5px;border-color:#ddd;word-break: break-all;"><span id="lblActionTakenOn1"></span></td>
                                             </tr>
                                             <tr>
                                                 <td style="padding:5px;border-color:#ddd;vertical-align:top;width:160px;display:inline-block;"><b>Recipients</b></td>
-                                                <td style="padding:5px;border-color:#ddd;"><span class="WordWrapText" id="lblRecipients1"></span></td>
+                                                <td style="padding:5px;border-color:#ddd;word-break: break-all;"><span id="lblRecipients1"></span></td>
                                             </tr>
                                             <tr>
                                                 <td style="padding:5px;border-color:#ddd;vertical-align:top;width:160px;display:inline-block;"><b>Mail Subject</b></td>
-                                                <td style="padding:5px;border-color:#ddd;"><span class="WordWrapText" id="lblMailSubject1"></span></td>
+                                                <td style="padding:5px;border-color:#ddd;word-break: break-all;"><span id="lblMailSubject1"></span></td>
                                             </tr>
 
                                             <tr>
                                                 <td style="padding:5px;border-color:#ddd;vertical-align:top;width:160px;display:inline-block;"><b>Message</b></td>
-                                                <td style="padding:5px;border-color:#ddd;"><span id="lblMailMessage1"></span></td>
+                                                <td style="padding:5px;border-color:#ddd;word-break: break-all;"><span id="lblMailMessage1"></span></td>
                                             </tr>
                                         </tbody>
                                     </table>
