--- a/WTO/Views/WTO/NotificationStakeholderList.cshtml
+++ b/WTO/Views/WTO/NotificationStakeholderList.cshtml
@@ -125,6 +125,7 @@ else
 <script>
     var IsScrollingOnce = true;
     function Search(PageIndx) {
+        $('#hdnPageIndex').val(PageIndx);
         ShowGlobalLodingPanel();
         var DateFrom = $('#txtfromdate').val().trim();
         var DateTo = $('#txttodate').val().trim();
@@ -132,7 +133,9 @@ else
             var to = new Date(DateTo);
             var from = new Date(DateFrom);
             if (to < from) {
-                Alert("Alert", "To date can not less than from date.<br/>", "Ok");
+                Alert("Alert", "To date can not be less than From date.<br/>", "Ok");
+                HideGlobalLodingPanel();
+                return false;
             }
         }
         var obj = {
@@ -196,9 +199,9 @@ else
         })
     }
     function Clear() {
-        $('#ddlType').val('0');
-        $('#txtfromdate').val('');
-        $('#txttodate').val('');
+        $('#ddlType').val('@ViewBag.Status');
+        $('#txtfromdate').val('@ViewBag.FromDate');
+        $('#txttodate').val('@ViewBag.ToDate');
         Search(1);
     }
     $(window).on("scroll", function (e) {
@@ -211,7 +214,8 @@ else
             var MaxVal = parseInt($('#hdnMaxPageIndex').val());
             if (NewVal <= MaxVal) {
                 Search(NewVal);
-                $('#hdnPageIndex').val(NewVal);
+
+                $('#divPaginationLoadingPanel').addClass('hidden');
             }
             else
                 $('#divPaginationLoadingPanel').addClass('hidden');
