Changes by Atul Sir and Avinash

--- a/WTO/contents/css/css/wto.css
+++ b/WTO/contents/css/css/wto.css
@@ -1144,7 +1144,14 @@ a:hover, a:focus {
 		 white-space: inherit;
 	}
 
-
+	.table-responsive > .table > tbody > tr > td,
+	.table-responsive > .table > tbody > tr > th, 
+	.table-responsive > .table > tfoot > tr > td, 
+	.table-responsive > .table > tfoot > tr > th, 
+	.table-responsive > .table > thead > tr > td, 
+	.table-responsive > .table > thead > tr > th {
+		 white-space: inherit;
+	}
 
 }
 
