--- a/WTO/Views/MoM/Add.cshtml
+++ b/WTO/Views/MoM/Add.cshtml
@@ -92,11 +92,11 @@
                                                         </label>
                                                     </div>
                                                 </th>
-                                                <th class="col-md-3" rowspan="3" style="width:35%;">Notification</th>
+                                                <th class="col-md-3" rowspan="3" style="width:25%;">Notification</th>
                                                 <th class="col-md-1 text-center" rowspan="3" style="width:10%;">Final Date of Comments</th>
                                                 <th class="col-md-1 text-center" rowspan="3" style="width:10%;">Country</th>
                                                 <th style="width:10%;"> Status</th>
-                                                <th class="text-center" rowspan="2" style="width:20%;">Note</th>
+                                                <th class="text-center" rowspan="2" style="width:30%;">Note</th>
                                                 <th class="text-center" rowspan="2" style="width:15%;">Group</th>
                                             </tr>
                                         </thead>
@@ -117,7 +117,7 @@
                                                         </td>
                                                         <td>
                                                             <p class="red-color NotiNumber" data-toggle="tooltip" data-placement="bottom" title="@objMOM.Description"><a href="@Url.Action("NotificationView", "WTO", new { Id = objMOM.NotificationId })" class="red-color " target="_blank">@objMOM.NotificationNumber</a> </p>
-                                                            <p style="word-wrap:break-word; width:400px;">
+                                                            <p>
                                                                 @objMOM.Title
                                                             </p>
                                                         </td>
@@ -199,10 +199,10 @@
                                     <input type="text" class="form-control" maxlength="20" id="txtNotificationNo" />
                                 </div>
                             </div>
-                            <div class='col-xs-12 col-sm-12 col-md-5'>
-                                <a class="btn btn-red pull-right" onclick="return ClosePopup();">Close&nbsp;<span class="glyphicon glyphicon-remove"></span></a>
-                                <a class="btn btn-dark-green pull-right" style="margin-right:15px;" onclick="GetAllNotifications(this);" data-CallFor="All"><img src="~/contents/img/save.png" />&nbsp;Save</a>
-                                <a class="btn btn-blue pull-right" id="btnSearchPopUp" style="margin-right:15px;" onclick="GetFilterNotification(this);" data-CallFor="All|Popup"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</a>
+                            <div class='col-xs-12 col-sm-12 col-md-5' style="margin-top:25px;">
+                                <a class="btn btn-red pull-right" onclick="return ClosePopup();" style="margin-left:15px;">Close</a>
+                                <a class="btn btn-dark-green pull-right" style="margin-left:15px;" onclick="GetAllNotifications(this);" data-CallFor="All">Save</a>
+                                <a class="btn btn-blue pull-right" id="btnSearchPopUp"  onclick="GetFilterNotification(this);" data-CallFor="All|Popup">Search</a>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 top-offset-10">
