--- a/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
@@ -77,7 +77,7 @@
                                                         <th class="col-sm-1 pdright"></th>
                                                         <th class="col-sm-5">Action</th>
                                                         <th class="col-sm-4">Required On</th>
-                                                        <th class="col-sm-2" id="divTakeActionHeader">Take Action</th>
+                                                        <th class="col-sm-2"><span id="divTakeActionHeader">Take Action</span></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody class="whitebackground" id="divPlanActions">
