--- a/WTO/Views/MoM/Add.cshtml
+++ b/WTO/Views/MoM/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BusinessObjects.MOM.NotificationMOM
 @{
-    ViewBag.Title = "Schedule new meeting";
+    ViewBag.Title = "Schedule meeting";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/JQuery/Mom.js?v=5"></script>
@@ -24,7 +24,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-10">
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12">
-                                <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/planameeting.png" alt="" style="margin-right:15px;"><b>Schedule new meeting</b></h4>
+                                <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/planameeting.png" alt="" style="margin-right:15px;"><b>Schedule meeting</b></h4>
                             </div>
                         </div>
                     </div>
@@ -34,7 +34,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
                 <div class="col-xs-12 col-sm-12 col-md-12">
                     <div class="row darkBlueblackbackground padding-10">
-                        <h4 class="white-color pull-left" style="padding-left:5px;"><b>Schedule new meeting</b></h4>
+                        <h4 class="white-color pull-left" style="padding-left:5px;"><b>Schedule meeting</b></h4>
                         <div class="col-xs-12 col-sm-6 col-md-4 pull-right">
                             <div class="input-group">
                                 <input class="form-control" id="txtSearch" autocomplete="off" placeholder="Search">
