--- a/WTO/Views/Partial/Notification/NotificationActions.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationActions.cshtml
@@ -63,10 +63,6 @@
                                                             {
                                                                 <span><a data-toggle="modal" data-SearchFor="@ac.Action" data-callfor="editaction" onclick="EditAction(@ac.NotificationActionId,this);"><img src="~/contents/img/bedit.png" alt="edit" /></a></span>
                                                             }
-                                                            <input type="hidden" id="hdnDraftRegulationBrief_@ac.NotificationActionId" value="@ac.DraftRegulationBrief" />
-                                                            <input type="hidden" id="hdnReferencetoInternationalStandards_@ac.NotificationActionId" value="@ac.ReferencetoInternationalStandards" />
-                                                            <input type="hidden" id="hdnTradeData_@ac.NotificationActionId" value="@ac.TradeData" />
-                                                            <input type="hidden" id="hdnImplications_@ac.NotificationActionId" value="@ac.Implications" />
                                                             <input type="hidden" id="hdnActionId_@ac.NotificationActionId" value="@ac.ActionId" />
                                                         </td>
                                                     }
@@ -77,10 +73,6 @@
                                                             {
                                                                 <span><a data-SearchId="@ac.ActionId" data-SearchFor="@ac.Action" onclick="ViewAction(@ac.NotificationActionId,this);"><i class="glyphicon glyphicon-eye-open" aria-hidden="true"></i></a></span>
                                                             }
-                                                            <input type="hidden" id="hdnDraftRegulationBrief_@ac.NotificationActionId" value="@ac.DraftRegulationBrief" />
-                                                            <input type="hidden" id="hdnReferencetoInternationalStandards_@ac.NotificationActionId" value="@ac.ReferencetoInternationalStandards" />
-                                                            <input type="hidden" id="hdnTradeData_@ac.NotificationActionId" value="@ac.TradeData" />
-                                                            <input type="hidden" id="hdnImplications_@ac.NotificationActionId" value="@ac.Implications" />
                                                             <input type="hidden" id="hdnActionId_@ac.NotificationActionId" value="@ac.ActionId" />
                                                         </td>
                                                     }
@@ -93,6 +85,40 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row top-offset-20">
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="table-responsive nopaging notificationlist sentmail">
+                            <table class="table table-bordered display">
+                                <thead class="second-blackbackground">
+                                    <tr>
+                                        <th style="width: 10%;">Meeting Date</th>
+                                        <th>Action(s)</th>
+                                        <th style="width: 10%;">Required by</th>
+                                        <th style="width: 10%;">Completed on</th>
+                                        <th style="width: 5%;"></th>
+                                    </tr>
+                                </thead>
+                                <tbody class="whitebackground">
+                                    <tr>
+                                        <td><p class="wto-label-normal">09 Jul 2018</p></td>
+                                        <td>
+                                            <p class="wto-label-normal">Responce to notifying country</p>
+                                            <p class="wto-label-normal">
+                                                <span style="color:#006558;"><b>Responses:</b></span>Lorem Ipsum is simply dummy text of the
+                                                printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+                                            </p>
+                                        </td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row">
                     @if (Model.MeetingDate != "")
                     {
