--- a/WTO/Views/Shared/_Layout.cshtml
+++ b/WTO/Views/Shared/_Layout.cshtml
@@ -57,17 +57,17 @@
                                 </a>
                             </li>
 
-                            <li class="list dropdown">
+                            <li class="list dropdown notification">
                                 <a class="dropdown-toggle drop" data-toggle="dropdown" href="#">
                                     <img src="~/contents/img/drpoNotification.png" /> <span class="submenulist">Notification</span><span class="caret pull-right" style="margin-top:7px;"></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li class="list Addnotification">
+                                    <li class="list AddNotification">
                                         <a href="@Url.Action("Edit_Notification", "AddNotification", new { Id = 0 })">
                                             <img src="~/contents/img/Addnotification1.png" alt="Addnotification" /><span class="submenulist">Add Notification</span>
                                         </a>
-                                    </li>
-                                    <li class="list notification">
+                                    </li>   
+                                    <li class="list NotificationList">
                                         <a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10 })">
                                             <img src="~/contents/img/notification.png" alt="notification" /><span class="submenulist">Notification List</span>
                                         </a>
@@ -81,7 +81,7 @@
                                 <ul class="dropdown-menu">
                                     <li class="list AddMOM">
                                         <a href="@Url.Action("Add", "MoM", new { Id = 0 })">
-                                            <img src="~/contents/img/AddMOM.png" alt="Addnotification" /><span class="submenulist">Schedule new meeting</span>
+                                            <img src="~/contents/img/AddMOM.png" alt="Addnotification" /><span class="submenulist">Schedule meeting</span>
                                         </a>
                                     </li>
                                     <li class="list AddMOM">
