Chnages on 10 July 2018

--- a/WTO/Views/MoM/Add.cshtml
+++ b/WTO/Views/MoM/Add.cshtml
@@ -117,7 +117,7 @@
                                                         </td>
                                                         <td>
                                                             <p class="red-color NotiNumber" data-toggle="tooltip" data-placement="bottom" title="@objMOM.Description"><a href="@Url.Action("NotificationView", "WTO", new { Id = objMOM.NotificationId })" class="red-color " target="_blank">@objMOM.NotificationNumber</a> </p>
-                                                            <p>
+                                                            <p style="word-wrap:break-word; width:400px;">
                                                                 @objMOM.Title
                                                             </p>
                                                         </td>
