--- a/WTO/Views/GlobalError/Index.cshtml
+++ b/WTO/Views/GlobalError/Index.cshtml
@@ -3,5 +3,16 @@
     ViewBag.Title = "GlobalError";
 }
 
-<h2>GlobalError</h2>
+<div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="row">
+        <img src="~/contents/img/ErrorImage.png" style="width: 100%;height: 91vh;"/>
+        <div class="col-md-6 col-sm-4 col-xs-11" style="position: absolute;margin-top: -354px;text-transform: uppercase;color: #fff;margin-left:50px;">
+            <img style="width: 20vh;position: absolute;margin-top: -120px;" src="~/contents/img/logo.png" />
+            <h2 style="font-size:40px;font-weight:700;">An Unexpected Error has occured<span style="color:#00c8aa;">!</span></h2>
+            <a href="/NotificationList?PageIndex=1&PageSize=10" class="btn btn-dark-green pull-left btn-padding addsavenotification bottom-offset-10">Go to Notification list page</a>
+        </div>
+    </div>
+
+</div>
+
 
