--- a/WTO/Views/Partial/ManageAccess/InternalStackHolders.cshtml
+++ b/WTO/Views/Partial/ManageAccess/InternalStackHolders.cshtml
@@ -79,25 +79,25 @@
                             </div>
                             <form class="form-horizontal top-offset-20" action="/action_page.php">
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3"> Name<sup class="mandetory">*</sup>:</label>
+                                    <label class="control-label col-sm-3"> Name<sup class="mandetory">*</sup><span class="hidden-xs">:</span></label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control" id="internalstakeholderName" maxlength="100" onkeypress="return isAlpha(event);">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3"> Designation:</label>
+                                    <label class="control-label col-sm-3"> Designation<span class="hidden-xs">:</span></label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control" id="internalstakeholderdesignation" maxlength="100" onkeypress="return isAlpha(event);">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3"> Org. Name:</label>
+                                    <label class="control-label col-sm-3"> Org. Name<span class="hidden-xs">:</span></label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control" id="internalstakeholderorganizationname" maxlength="200" onkeypress="return isAlpha(event);">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3">Email<sup class="mandetory">*</sup>:</label>
+                                    <label class="control-label col-sm-3">Email<sup class="mandetory">*</sup><span class="hidden-xs">:</span></label>
                                     <div class="col-sm-9">
                                         <input type="Email" class="form-control" id="internalstackholderEmailId" maxlength="100">
                                     </div>
