--- a/WTO/Views/Partial/ManageAccess/StakeHolder.cshtml
+++ b/WTO/Views/Partial/ManageAccess/StakeHolder.cshtml
@@ -74,29 +74,17 @@
                             </div>
                             <form class="form-horizontal top-offset-20" action="/action_page.php">
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3">Full Name<sup class="mandetory">*</sup>:</label>
+                                    <label class="control-label col-sm-3">Full Name<sup class="mandetory">*</sup><span class="hidden-xs">:</span></label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control" id="stakeholderName" maxlength="50" onkeypress="return isAlpha(event);">
                                     </div>
                                 </div>
-                                @*<div class="form-group">
-                                        <label class="control-label col-sm-3">Last Name<sup class="mandetory">*</sup>:</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="stakeholderLastName" maxlength="50" onkeypress="return isAlpha(event);">
-                                        </div>
-                                    </div>*@
                                 <div class="form-group">
                                     <label class="control-label col-sm-3">Email<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-9">
                                         <input type="Email" class="form-control" id="stackholderEmailId" maxlength="70">
                                     </div>
                                 </div>
-                                @*<div class="form-group">
-                                        <label class="control-label col-sm-3">Phone<sup class="mandetory">*</sup>:</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="stackholderMobileNo" maxlength="10" onkeypress="return isNumeric(event);">
-                                        </div>
-                                    </div>*@
                                 <div class="form-group">
                                     <label class="control-label col-sm-3">Organization<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-9">
