--- a/WTO/Views/WTO/NotifyingMemberList.cshtml
+++ b/WTO/Views/WTO/NotifyingMemberList.cshtml
@@ -177,7 +177,7 @@ else
         }
         var obj = {
             Hscode: $('#hdnHsCode').val().trim(),
-            CountryName: $('[id$=ddlCountry]').val(),
+            CountryId: $('[id$=ddlCountry]').val(),
             FromDate: $('#txtfromdate').val().trim(),
             ToDate: $('#txttodate').val().trim(),
             PageIndex: PageIndx,
