--- a/WTO/Views/MoM/Add.cshtml
+++ b/WTO/Views/MoM/Add.cshtml
@@ -53,7 +53,7 @@
                         <div class="col-xs-12 col-sm-12 col-md-12 lightgraybg" style="border-radius:10px;">
                             <div class="row top-offset-20">
                                 <div class="col-xs-12 col-sm-5 col-md-2">
-                                    <label>Meeting Date </label><span class="pull-right">:</span>
+                                    <label>Meeting Date </label><span class="pull-right hidden-xs">:</span>
                                 </div>
                                 <div class="form-group has-feedback ">
                                     <div class="col-xs-12 col-sm-4 col-md-3 bottom-offset-20">
