--- a/WTO/Views/MoM/Edit.cshtml
+++ b/WTO/Views/MoM/Edit.cshtml
@@ -77,7 +77,7 @@
                         @if (@Model.MeetingDate != null)
                         {
                             <div class="col-xs-12 col-sm-5 col-md-2">
-                                <label>Meeting Date </label><span class="pull-right">:</span>
+                                <label>Meeting Date </label><span class="pull-right hidden-xs">:</span>
                             </div>
                             <div class="form-group has-feedback ">
                                 <div class="col-xs-6 col-sm-4 col-md-3 bottom-offset-20">
@@ -144,7 +144,7 @@
                                                                 <b>Title: </b> @objMOM.Title
                                                             </p>
                                                             <p>
-                                                                @if (objMOM.NotificationGroup != "")
+                                                                @if (objMOM.NotificationGroup.Trim() != "")
                                                                 {
                                                                     <b>Group : </b><span>@objMOM.NotificationGroup</span>
                                                                 }
@@ -226,7 +226,7 @@
 
 <!-- body section End -->
 <!--Plan action Popup start-->
-@{ Html.RenderAction("GetNotificationPlanTakeAction", "AddNotification", new { Id = (@Model.Notifications.Count > 0 ? @Model.Notifications[0].NotificationId : 0) }); }
+@{ Html.RenderAction("GetNotificationPlanTakeAction", "AddNotification", new { Id = 0 }); }
 <!--Plan action Popup End-->
 <!--Meeting Date Popup start-->
 <div class="modal fade selecthrmodal" id="ModelMeetingDate" role="dialog" data-backdrop="static" data-keyboard="false">
@@ -251,7 +251,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-bold dark-blue">Meeting Date <span class="pull-right">:</span></p>
+                                            <p class="wto-label-bold dark-blue">Meeting Date <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <input type="text" class="form-control date-picker" style="cursor:pointer" value="@Model.MeetingDate" id="txtmeetingdate" onchange="return IsMeetingExists(@Model.MoMId);" />
