--- a/WTO/Views/Partial/Notification/NotificationActions.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationActions.cshtml
@@ -158,6 +158,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <input  type="hidden" id="hdnActionMailId" value="0"/>
                                 <div class="top-offset-10">
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
@@ -289,16 +290,15 @@
                                 </div>
                             </div>
                             <!--End section For Print Div-->
-
                             <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-20">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
                                         <a class="btn btn-red btn-padding pull-right left-offset-10" onclick="return CloseViewAction();" id="lnkClose">Close</a>
-                                        <a class="btn btn-dark-green pull-right btn-padding" onclick="return printDiv('prntDiv');" id="btnPrint">Print</a>
+                                        <a class="btn btn-dark-green pull-right btn-padding left-offset-10" onclick="return printDiv('prntDiv');" id="btnPrint">Print</a>
+                                        <a class="btn btn-light-blue btn-padding pull-right left-offset-10 hidden" onclick="return OpenActionResponse();" id="lnkAddActionResponse">Add Response</a>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -306,12 +306,78 @@
         </div>
     </div>
 </div>
+<div class="modal fade selecthrmodal" id="ActionResponseModal" role="dialog" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-lg selecthrdialog">
+        <div class="modal-content selecthrcontent">
+            <div class="modal-header selecthrheader">
+                <button type="button" class="close selecthrclose" data-dismiss="modal">
+                    <span class="glyphicon glyphicon-remove"></span>
+                </button>
+            </div>
+            <div class="modal-body selecthrbody">
+                <div class="row">
+                    <div id="divAddActionResponse" class="col-xs-12 col-sm-12 col-md-12">
+                        <div class="notificationnumber padding-top-10 padding-bottom-10" style="background-color: #81bbbd; margin: 10px 0px;">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 top-offset-10">
+                                    <div class="col-xs-12 col-sm-3 col-md-3">
+                                        <p class="wto-label-bold dark-blue">Received on<sup class="mandetory">*</sup><span class="pull-right">:</span></p>
+                                    </div>
+                                    <div class="col-xs-12 col-sm-9 col-md-9">
+                                        <input type="text" id="txtActionResponseReceivedOn" class="form-control date-picker whitebackground" placeholder="Select date." />
+                                        <i class="glyphicon glyphicon-calendar form-control-feedback blue-color"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
+                                    <div class="col-xs-12 col-sm-3 col-md-3">
+                                        <p class="wto-label-bold dark-blue">Message<sup class="mandetory">*</sup><span class="pull-right">:</span></p>
+                                    </div>
+                                    <div class="col-xs-12 col-sm-9 col-md-9">
+                                        <textarea id="txtActionResponseMessage" class="form-control whitebackground" cols="30" rows="7" placeholder="Enter response here."></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
+                                    <div class="col-xs-12 col-sm-3 col-md-3">
+                                        <p class="wto-label-bold dark-blue">Attachment</p>
+                                    </div>
+                                    <div class="col-xs-12 col-sm-9 col-md-9">
+                                        <div class="form-group">
+                                            <div class="input-group col-xs-12">
+                                                <input type="text" class="form-control whitebackground z-index-0" id="txtResponseActionAttachment" disabled="" placeholder="0 file(s) selected">
+                                                <span class="input-group-btn">
+                                                    <input type="file" id="UploadActionResponseDoc" accept=".pdf,.docx,.doc" multiple="" style="display:none;" onchange="return AddMultipleDocAction(this);">Browse
+                                                    <button class="browse btn btn-primary z-index-0" type="button" onclick="return UploadResponseAttachment();"> Browse</button>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div id="DivActionResponseAttachments" class="Attachmentdiv" readonly="" style="background:#81bbbd !important;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
+                                    <div class="col-xs-12 pull-right">
+                                        <a class="btn btn-red btn-padding pull-right left-offset-10" role="button" data-toggle="collapse"  onclick="ClearActionResponse();">Discard</a>
+                                        <a class="btn btn-light-blue btn-padding pull-right" onclick="return SaveActionResponse();">Save response</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
-
-<!-- edit meeting note modal popup -->
-<div class="modal fade selecthrmodal" id="AddNote" role="dialog" data-backdrop="static" data-keyboard="false">
-    @{ Html.RenderAction("GetNotificatioNote", "AddNotification", new { Id = @Model.NotificationId }); }
-</div>
-<!-- edit meeting note modal popup -->
+                    <!-- edit meeting note modal popup -->
+                    <div class="modal fade selecthrmodal" id="AddNote" role="dialog" data-backdrop="static" data-keyboard="false">
+                        @{ Html.RenderAction("GetNotificatioNote", "AddNotification", new { Id = @Model.NotificationId }); }
+                    </div>
+                    <!-- edit meeting note modal popup -->
