--- a/WTO/Views/Partial/StakeHolderConversation.cshtml
+++ b/WTO/Views/Partial/StakeHolderConversation.cshtml
@@ -23,7 +23,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-4 col-md-4">
-                                        <p class="wto-label-bold dark-blue">Title <span class="pull-right">:</span></p>
+                                        <p class="wto-label-bold dark-blue">Title <span class="pull-right hidden-xs">:</span></p>
                                     </div>
                                     <div class="col-xs-12 col-sm-8 col-md-8">
                                         <p class="wto-label-normal dark-blue WordWrapText">@Html.Label("", "Title", new { id = "lblTitle_ConversationPopUp" })</p>
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-4 col-md-4">
-                                        <p class="wto-label-bold dark-blue">Organisation Name<span class="pull-right">:</span></p>
+                                        <p class="wto-label-bold dark-blue">Organisation Name<span class="pull-right hidden-xs">:</span></p>
                                     </div>
                                     <div class="col-xs-12 col-sm-8 col-md-8">
                                         <p class="wto-label-normal dark-blue" id="lblStakeholderName">@Html.Label("", "Name", new { id = "lblStakeholderName_ConversationPopUp" })</p>
@@ -136,7 +136,7 @@
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-12 col-md-12 top-offset-10">
                                                         <div class="col-xs-12 col-sm-3 col-md-3">
-                                                            <p class="wto-label-bold dark-blue">Received on<sup class="mandetory">*</sup><span class="pull-right">:</span></p>
+                                                            <p class="wto-label-bold dark-blue">Received on<sup class="mandetory">*</sup><span class="pull-right hidden-xs">:</span></p>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-9 col-md-9">
                                                             <input type="text" id="txtResponseReceivedOn" class="form-control date-picker whitebackground" placeholder="Select date." />
@@ -147,7 +147,7 @@
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
                                                         <div class="col-xs-12 col-sm-3 col-md-3">
-                                                            <p class="wto-label-bold dark-blue">Message<sup class="mandetory">*</sup><span class="pull-right">:</span></p>
+                                                            <p class="wto-label-bold dark-blue">Message<sup class="mandetory">*</sup><span class="pull-right hidden-xs">:</span></p>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-9 col-md-9">
                                                             <textarea id="txtResponseMessage" class="form-control whitebackground" cols="30" rows="7" placeholder="Enter response here."></textarea>
@@ -172,32 +172,7 @@
                                                             <div id="DivStakeAttachments" class="Attachmentdiv" readonly="" style="background:#81bbbd !important;"></div>
                                                         </div>
                                                     </div>
-
-                                                    @*<div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
-                                                            <div class="col-xs-12 col-sm-3 col-md-3">
-                                                                <p class="wto-label-bold dark-blue">Attachment<span class="pull-right">:</span></p>
-                                                            </div>
-                                                            <div class="col-xs-12 col-sm-9 col-md-9">
-                                                                <div class="input-group">
-                                                                    <label class="input-group-btn">
-                                                                        <span class="btn btn-primary browse">
-                                                                            Browse&hellip; <input type="file" id="UploadStackDoc" accept=".pdf,.docx,.doc" multiple style="display:none;" onchange="return AddMultipleDoc(this);" />
-                                                                        </span>
-                                                                    </label>
-                                                                    <input type="text" class="form-control" style="height:34px;" id="txtResponseAttachment" readonly="readonly" disabled>
-
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-xs-12 col-sm-3 col-md-3"></div>
-                                                            <div class="col-xs-12 col-sm-9 col-md-9">
-                                                                <div id="DivStakeAttachments" class="" readonly="">
-
-                                                                </div>
-                                                            </div>
-                                                        </div>*@
                                                 </div>
-
-
                                                 <div class="row">
                                                     <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
                                                         <div class="col-xs-6 pull-right">
