--- a/WTO/Views/WTO/AddNotification.cshtml
+++ b/WTO/Views/WTO/AddNotification.cshtml
@@ -474,7 +474,7 @@
                                                         </div>
                                                         <div class="row top-offset-10 ObtainDocument @((Model.DoesHaveDetails != null && !Convert.ToBoolean(Model.DoesHaveDetails)) ? " " : "hidden" )">
                                                             <div class="col-xs-12 col-sm-4 col-md-3">
-                                                                <p class="wto-label-bold">Obtain full text(s) of regulation by<sup class="mandetory">*</sup> <span class="pull-right">:</span></p>
+                                                                <p class="wto-label-bold">Obtain full text(s) of regulation by<sup class="mandetory">*</sup> <span class="pull-right hidden-xs">:</span></p>
                                                             </div>
                                                             <div class="col-xs-12 col-sm-4 col-md-3">
                                                                 <p class="wto-label-normal">
@@ -605,7 +605,7 @@
                                 <div class="notificationnumber padding-bottom-10">
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-bold dark-blue">Notification Number <span class="pull-right">:</span></p>
+                                            <p class="wto-label-bold dark-blue">Notification Number <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal dark-blue">@Model.NotificationNumber</p>
@@ -700,7 +700,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-bold dark-blue">Notification Number <span class="pull-right">:</span></p>
+                                            <p class="wto-label-bold dark-blue">Notification Number <span class="pull-right  hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal dark-blue">@Model.NotificationNumber</p>
@@ -708,7 +708,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-bold dark-blue">Title <span class="pull-right">:</span></p>
+                                            <p class="wto-label-bold dark-blue">Title <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal dark-blue">@Model.Title</p>
@@ -716,7 +716,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-bold dark-blue">Notification HS Codes <span class="pull-right">:</span></p>
+                                            <p class="wto-label-bold dark-blue">Notification HS Codes <span class="pull-righ hidden-xst">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal dark-blue">@( Convert.ToString(Model.HSCodes) == "-1" ? "No HS Code" : Convert.ToString(Model.HSCodes))</p>
@@ -993,7 +993,7 @@
                                 <div class="top-offset-10">
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-2">
-                                            <p class="wto-label-normal"><b>Mail To<sup class="mandetory">*</sup><span class="pull-right"></b> <span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Mail To<sup class="mandetory">*</sup></b><span class="pull-right  hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-10">
                                             <input type="text" id="EnquiryMailDeskId" class="form-control whitebackground" value="@Model.EnquiryEmailId">
@@ -1001,7 +1001,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-2">
-                                            <p class="wto-label-normal"><b>Subject<sup class="mandetory">*</sup><span class="pull-right"></b> <span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Subject<sup class="mandetory">*</sup></b><span class="pull-right  hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-10">
                                             <input type="text" id="txtMailToEnqSubject" class="form-control whitebackground" value="">
@@ -1009,7 +1009,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-2">
-                                            <p class="wto-label-normal"><b>Body<sup class="mandetory">*</sup><span class="pull-right"></b> <span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Body<sup class="mandetory">*</sup></b><span class="pull-right  hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-10">
                                             <textarea class="form-control whitebackground RfpEditor" id="txtMailToEnqMailBody" cols="30" rows="6"></textarea>
@@ -1056,7 +1056,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-bold dark-blue">Notification Number <span class="pull-right">:</span></p>
+                                            <p class="wto-label-bold dark-blue">Notification Number <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal dark-blue">@Model.NotificationNumber</p>
@@ -1064,7 +1064,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-bold dark-blue">Title <span class="pull-right">:</span></p>
+                                            <p class="wto-label-bold dark-blue">Title <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal dark-blue">@Model.Title</p>
@@ -1074,7 +1074,7 @@
                                 <div class="top-offset-10">
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-3">
-                                            <p class="wto-label-normal"><b>Translator<sup class="mandetory">*</sup></b> <span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Translator<sup class="mandetory">*</sup></b> <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-9">
                                             <div class="wto-label-normal">
@@ -1086,7 +1086,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-3">
-                                            <p class="wto-label-normal"><b>Subject<sup class="mandetory">*</sup><span class="pull-right"></b> <span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Subject<sup class="mandetory">*</sup></b> <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-9">
                                             <input id="txtMailToTranslatorSubject" type="text" class="form-control whitebackground" value="">
@@ -1094,7 +1094,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-3">
-                                            <p class="wto-label-normal"><b>Body<sup class="mandetory">*</sup><span class="pull-right"></b> <span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Body<sup class="mandetory">*</sup></b><span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-9">
                                             <textarea id="txtMailToTranslatorMailBody" class="form-control whitebackground RfpEditor" cols="30" rows="6"></textarea>
@@ -1102,7 +1102,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-3">
-                                            <p class="wto-label-normal"><b>Attachment(s) <sup class="mandetory">*</sup></b><span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Attachment(s) <sup class="mandetory">*</sup></b><span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-9">
                                             <div id="UploadedReg">
@@ -1184,7 +1184,7 @@
                                 <div class="top-offset-10">
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-normal"><b>Notification Number</b> <span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Notification Number</b> <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal">@Model.NotificationNumber</p>
@@ -1192,7 +1192,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-normal"><b>Title</b> <span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Title</b> <span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal">@Model.Title</p>
@@ -1200,7 +1200,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-normal"><b>Response Date</b><span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Response Date</b><span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal" id="lblResponseDate"></p>
@@ -1208,7 +1208,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-normal"><b>Subject</b><span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Subject</b><span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal" id="lblResponseMailSubject"></p>
@@ -1216,7 +1216,7 @@
                                     </div>
                                     <div class="row top-offset-10">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-normal"><b>Message</b><span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Message</b><span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal" id="lblResponseMailMessage"></p>
@@ -1224,7 +1224,7 @@
                                     </div>
                                     <div class="row top-offset-10" id="divResponseAttachment">
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <p class="wto-label-normal"><b>Attachment</b><span class="pull-right">:</span></p>
+                                            <p class="wto-label-normal"><b>Attachment</b><span class="pull-right hidden-xs">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8">
                                             <p class="wto-label-normal" id="lblResponseMailAttachments"></p>
